--- a/src/app/certifications/certifications.html
+++ b/src/app/certifications/certifications.html
@@ -1,6 +1,6 @@
 <section class="certifications" id="certs">
 
-    <h2 class="certifications__header">Certifications</h2>
+    <h1>🎓 Certifications</h1>
 
 
     <app-certification title="Curso maestro de Web Scraping: Extracción de Datos de la Web"
