--- a/src/app/education-list/education-list.html
+++ b/src/app/education-list/education-list.html
@@ -1,7 +1,7 @@
 <section class="education-list" id="education">
 
 
-    <h2 class="education-header">Education</h2>
+    <h1>📚 Education</h1>
 
     <div class="education-list__wrapper">
 
@@ -86,7 +86,7 @@
                 <ul class="education-knowledge">
                     <li>To develop and train our programming logic</li>
                     <li>The OOP principles</li>
-                    <li>To make projects using the most used technologies in the corporative world</li>
+                    <li>Which technologies are the most used</li>
                     <li>To work with my team mates and doing projects as a team (WorkTeam)</li>
                     <li>Good programming practices and code documentation</li>
                     <li>To adapt to different technologies</li>
