--- a/src/app/personal-projects/personal-projects.html
+++ b/src/app/personal-projects/personal-projects.html
@@ -1,5 +1,5 @@
 <section class="personal-projects" id="projects">
-    <h2 class="personal-projects__header">My Projects</h2>
+    <h1>📂 My Projects</h1>
 
     <app-project title="Sticky Fingers" imgFileName="stickyFingers.png"
         repositoryLink="https://github.com/Onion-Ring/StickyFingers">
@@ -10,7 +10,7 @@
         </p>
 
         <div class="project__techs-used">
-            <h4>Tech used on this project</h4>
+            <h3>Tech used on this project</h3>
 
             <div class="project__group__img angular">
                 <img src="./assets/icons/angular.svg" alt="angular logo">
@@ -50,7 +50,7 @@
         </div>
 
         <div class="project__techs-used">
-            <h4>Tech used on this project</h4>
+            <h3>Tech used on this project</h3>
 
             <div class="project__group__img angular">
                 <img src="./assets/icons/angular.svg" alt="angular logo">
