--- a/src/app/tech-stack/tech-stack.html
+++ b/src/app/tech-stack/tech-stack.html
@@ -1,6 +1,6 @@
 <section class="tech-stack" id="tech">
 
-    <h2 class="tech-stack__header">Tech Stack</h2>    
+    <h1> 💻 Tech Stack</h1>    
 
     <app-tech-stack-group title="📝 IDEs">
         <div class="tech-stack__group__img blue-shadow">
