--- a/src/app/work-experience/experience/experience.css
+++ b/src/app/work-experience/experience/experience.css
@@ -6,55 +6,53 @@
     padding: 25px;        
 }
 
-.experience h3 {
-    color: rgb(223, 223, 223);
-    margin-bottom: 15px;
-}
-
-.experience span {
-    color: rgb(153, 153, 153);
-    display: block;
-    margin: 2px;
+.experience h2 {    
+    margin-bottom: 15px;    
     text-align: left;
 }
 
-.experience h4 {
+.experience span {    
+    display: block;
+    margin: 2px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    text-align: left;
+}
 
-    margin-top: 20px;
-    color: rgb(212, 212, 212);
-    font-size: 20px;
+.experience h3 {    
+    text-align: left;        
     margin-bottom: 20px;
 
 }
 
 .experience a {
     text-decoration: none;
-    color: rgb(187, 156, 97);
+    color: #ad4040;
     font-weight: bold;
 }
 
+.experience li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0.25em;
+    width: 20px;
+    height: 20px;
+    background-image: url("../../../assets/icons/arrow-narrow-right.svg");
+    background-size: contain;
+    background-position: -2px -3px;
+    background-repeat: no-repeat;
+}
+
+
+
 .experience li {
+    padding-left: 25px;
+    position: relative;
     display: list-item;
-    color: rgb(153, 153, 153);
-    font-size: 16px;
-    padding: 4px;
-    list-style-type: none;
-}
-
-@media (max-width: 740px) {
-
-    .experience {
-        width: 90%;
-        margin-left: 5%;
-    }
-
-}
-
-@media (max-width: 499px) {
-
-    .experience {
-        width: 90%;
-        margin-left: 5%;
-    }
-
+    margin-top: 10px;
+    margin-bottom: 10px;
+    list-style: none;
+    margin-left: 0;
+    text-align: left;
 }
