--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,20 @@
 /*CSS Reset*/
-*{
+* {
     outline: none;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;    
+    box-sizing: border-box;
 }
 
-li {
+.vs-code-ui li {
     display: inline-block;
     margin-left: 8px;
-    color: rgb(192, 192, 192);
+    color: rgb(206, 205, 205);
     font-size: 14px;
 }
 
 .ui-separator {
-    height: 1px;    
+    height: 1px;
     background-color: #474747;
     border: none;
 }
@@ -33,14 +33,41 @@ li {
     height: 100%;
 }
 
-li:hover{
+.vs-code-ui li:hover {
     cursor: pointer;
 }
 
-body{
-    background-color: #121417;    
+p,
+li,
+span {
+    color: rgb(207, 202, 183);
+    font-size: 20px;
+    font-weight: 500;
+}
+
+
+h1 {
+    color: rgb(196, 189, 165);
+    padding: 5px;
+    text-align: center;
+    font-size: 36px;
+    margin: 60px 0 10px 0;
+}
+
+h2 {
+    color: rgb(182, 175, 147);
+    font-size: 30px;
+}
+
+h3 {
+    color: rgb(155, 150, 128);
+    font-size: 24px;
+}
+
+body {
+    background-color: #121417;
     font-family: 'poppins', sans-serif;
-    
+
     overflow-x: hidden;
     overflow-y: auto;
 }
