--- a/src/app/certifications/certifications.html
+++ b/src/app/certifications/certifications.html
@@ -4,7 +4,7 @@
 
 
     <app-certification title="Curso maestro de Web Scraping: Extracción de Datos de la Web"
-        credentialId="UC-639e2a06-d2bd-4b2c-aa7a-54c92505d7af" issued="Feb 2025" learningPlatform="udemy">
+        credentialId="UC-639e2a06-d2bd-4b2c-aa7a-54c92505d7af" issued="Feb 2025" learningPlatform="udemy" certImg="certUdemy_Scraping.jpg">
 
         <ol class="certification__learned__list">
             <li>Scrape static pages</li>
