--- a/src/app/education-list/education-list.html
+++ b/src/app/education-list/education-list.html
@@ -87,7 +87,7 @@
                     <li>To develop and train our programming logic</li>
                     <li>The OOP principles</li>
                     <li>Which technologies are the most used</li>
-                    <li>To work with my team mates and doing projects as a team (WorkTeam)</li>
+                    <li>WorkTeam</li>
                     <li>Good programming practices and code documentation</li>
                     <li>To adapt to different technologies</li>
                 </ul>
@@ -99,9 +99,9 @@
                 <img alt="IES majuelo logo" src="../../assets/centers/majuelo.jpg" class="education-center-logo">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.0303720283055!2d-6.070442799999999!3d37.389114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1213525f4743e5%3A0x21ceb607bb8bb7fa!2sIes%20Secondary%20Education%20Institute%20El%20Majuelo!5e0!3m2!1sen!2ses!4v1770673107624!5m2!1sen!2ses"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <span class="education-mark ">Mark: <span class="yellow"> 7.6</span></span>
+                <span class="education-mark ">Mark: <span class="green"> 7.6</span></span>
             </div>
         </div>
     </div>
