--- a/src/app/personal-projects/personal-projects.html
+++ b/src/app/personal-projects/personal-projects.html
@@ -1,7 +1,7 @@
 <section class="personal-projects" id="projects">
     <h1>📂 My Projects</h1>
 
-    <app-project title="Sticky Fingers" imgFileName="stickyFingers.png"
+    <app-project title="Sticky Fingers" imgFileName="StickyFingersDemo.png"
         repositoryLink="https://github.com/Onion-Ring/StickyFingers">
         <p class="project__description">Simple notes management application made using Angular. Notes can be created
             with a priority level,
@@ -41,7 +41,7 @@
 
     </app-project>
 
-    <app-project title="Github Visualizer" imgFileName="github.svg"
+    <app-project title="Github Visualizer" imgFileName="GithubVisualizerDemo.png"
         repositoryLink="https://github.com/Onion-Ring/Github-Visualizer">
         <p class="project__description">Brings Github public profile information for the account provided using the Github API. You can see info like the name, profile photo, profile description, followers, public repositories... </p>
 
