--- a/src/app/tech-stack/tech-stack-group/tech-stack-group.css
+++ b/src/app/tech-stack/tech-stack-group/tech-stack-group.css
@@ -12,7 +12,7 @@
 
 .tech-stack__group__img {
     display: inline-block;   
-    background-color: #cac5c2; 
+    background-color: #c7c7c7; 
     border-radius: 5px;
     margin: 30px 25px 30px 25px;
     width: 100px;
