--- a/src/app/work-experience/work-experience.html
+++ b/src/app/work-experience/work-experience.html
@@ -16,7 +16,7 @@
 
 
     <app-experience title=".NET Full stack developer" companyName="Eikon Data" employmentType="Full-time"
-        [intervalDates]="'09/08/2025-'+present" modality="Remote" companyLink="https://www.eikondata.es/">
+        [intervalDates]="'09/08/2025-'" modality="Remote" companyLink="https://www.eikondata.es/">
 
         <ol>
             <li>Add new features on razor/blazor projects.</li>
