--- a/src/app/education-list/education/education.css
+++ b/src/app/education-list/education/education.css
@@ -8,7 +8,7 @@
     top: 0;
     z-index: 10;
     position: relative;
-    margin-left: 5%;
+    margin-left: 5%;    
     border: 1px solid #2E343D;
     background: #1b1f24a1;
 }
@@ -26,11 +26,6 @@
     width: 140px;
     margin-left: 0;
     height: 140px;
-}
-
-
-.yellow {
-    color: #b4a655;
 }
 
 .green {
@@ -75,7 +70,7 @@
     left: 5%;
     top: 13%;
     height: 500px;
-    width: 45%;
+    width: 40%;
 }
 
 .education-obtained-at {
@@ -83,7 +78,7 @@
     top: 13%;
     height: 500px;
     right: 5%;
-    width: 45%;
+    width: 40%;
 }
 
 .education-obtained-at h3 {
@@ -130,7 +125,7 @@
 }
 
 iframe {
-    width: 90%;
+    width: 100%;
     height: 170px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -161,7 +156,7 @@ iframe {
 
 .education-skills {
     text-align: left;
-    width: 80%;
+    width: 90%;
 }
 
 .education-skills div {
@@ -169,7 +164,7 @@ iframe {
     width: 80px;
     display: inline-flex;
     gap: 10px;
-    background-color: #cac5c2;
+    background-color: #c7c7c7;
     margin: 15px 15px 15px 0;
     border-radius: 5px;
 }
