--- a/src/app/presentation/vs-code/file-visualizer/file-visualizer.css
+++ b/src/app/presentation/vs-code/file-visualizer/file-visualizer.css
@@ -32,6 +32,8 @@
 .vs-code-ui__file-visualizer__files-open__file__title {
     position: absolute;
     left: 35px;
+    font-size: 16px;
+    color: #d4d4d4;
     top: 5px;
 }
 
@@ -84,6 +86,11 @@
 .vs-code-ui__file-visualizer__file-content tr> :not(td+td) {
     width: 50px;
     text-align: center;
+    
+}
+
+.vs-code-ui__file-visualizer__file-content span{
+    font-size: 17px;
 }
 
 @media (max-width: 1740px) {
