--- a/src/styles.css
+++ b/src/styles.css
@@ -64,10 +64,9 @@ h3 {
     font-size: 24px;
 }
 
-body {
-    background-color: #121417;
+body {    
+    background: linear-gradient(to bottom left, #121417, #383838, #121417);
     font-family: 'poppins', sans-serif;
-
     overflow-x: hidden;
     overflow-y: auto;
 }
