--- a/src/app/education-list/education-list.html
+++ b/src/app/education-list/education-list.html
@@ -10,8 +10,28 @@
         <div class="education" titleObtained="Technician in Microcomputer Systems and Networks" app-education
             title="I.E.S Alixar">
 
-            <div class="education-main-info">
-                <h3 class="education-subtitle">Main Skills:</h3>
+            <div class="education-main-info">                
+                <h3 class="education-subtitle">What I've learnt:</h3>
+                <ul class="education-knowledge">
+                    <li>Powershell, CMD and Linux CLI commands</li>
+                    <li>Networking and subnetting</li>
+                    <li>Office application management (Excel, Word, Access...)</li>
+                    <li>To assemble computers from scratch</li>
+                    <li>Fix network-related errors</li>
+                    <li>Ubuntu and Windows Server</li>
+                </ul>
+            </div>
+            <hr />
+            <div class="education-obtained-at">
+                <h3 class="education-subtitle">Obtained at:</h3>
+                <img alt="IES alixar logo" src="../../assets/centers/alixar.png" class="education-center-logo">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d792.574355677907!2d-6.0584832263879225!3d37.38279795868623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126cb0c66b619d%3A0x1ca80e208bb71b4d!2sInstituto%20de%20Educaci%C3%B3n%20Secundaria%20Alixar!5e0!3m2!1ses!2ses!4v1770672022297!5m2!1ses!2ses"
+                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <span class="education-mark">Mark: <span class="green">9.5</span> </span>
+            </div>
+            <div class="education-main-skills">
+                <h3 class="education-subtitle center">Main Skills:</h3>
                 <div class="education-skills">
                     <div class="js">
                         <img alt="linux-icon" src="./assets/icons/linux.svg" />
@@ -32,55 +52,13 @@
                         <img alt="virtual box" src="./assets/icons/virtualbox.svg" />
                     </div>
                 </div>
-
-
-                <h3 class="education-subtitle">What I've learnt:</h3>
-                <ul class="education-knowledge">
-                    <li>Powershell, CMD and Linux CLI commands</li>
-                    <li>Networking and subnetting</li>
-                    <li>Office application management (Excel, Word, Access...)</li>
-                    <li>To assemble computers from scratch</li>
-                    <li>Fix network-related errors</li>
-                    <li>Ubuntu and Windows Server</li>
-                </ul>
-            </div>
-
-            <hr />
-            <div class="education-obtained-at">
-                <h3 class="education-subtitle">Obtained at:</h3>
-                <img alt="IES alixar logo" src="../../assets/centers/alixar.png" class="education-center-logo">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d792.574355677907!2d-6.0584832263879225!3d37.38279795868623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126cb0c66b619d%3A0x1ca80e208bb71b4d!2sInstituto%20de%20Educaci%C3%B3n%20Secundaria%20Alixar!5e0!3m2!1ses!2ses!4v1770672022297!5m2!1ses!2ses"
-                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <span class="education-mark">Mark: <span class="green">9.5</span> </span>
             </div>
 
         </div>
 
         <div class="education" titleObtained="Higher Technician in Multiplatform Application Development" app-education title="I.E.S Majuelo">
             <div class="education-main-info">
-                <h3 class="education-subtitle">Main Skills:</h3>
-                <div class="education-skills">
-
-                    <div class="csharp">
-                        <img alt="csharp" src="./assets/icons/csharp.svg" />
-                    </div>
-                    <div class="java">
-                        <img alt="java" src="./assets/icons/java.svg" />
-                    </div>
-                    <div class="blue-shadow">
-                        <img alt="c" src="./assets/icons/c.svg" />
-                    </div>
-                    <div class="python">
-                        <img alt="python" src="./assets/icons/python.svg" />
-                    </div>
-                    <div class="html5">
-                        <img alt="html5" src="./assets/icons/html5.svg" />
-                    </div>
-                    <div class="red-shadow">
-                        <img alt="sql-server" src="./assets/icons/sql-server.svg" />
-                    </div>
-                </div>
+                
 
                 <h3 class="education-subtitle">What I've learnt:</h3>
                 <ul class="education-knowledge">
@@ -103,6 +81,30 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <span class="education-mark ">Mark: <span class="green"> 7.6</span></span>
             </div>
+            <div class="education-main-skills">
+                <h3 class="education-subtitle center">Main Skills:</h3>
+                <div class="education-skills">
+                
+                    <div class="csharp">
+                        <img alt="csharp" src="./assets/icons/csharp.svg" />
+                    </div>
+                    <div class="java">
+                        <img alt="java" src="./assets/icons/java.svg" />
+                    </div>
+                    <div class="blue-shadow">
+                        <img alt="c" src="./assets/icons/c.svg" />
+                    </div>
+                    <div class="python">
+                        <img alt="python" src="./assets/icons/python.svg" />
+                    </div>
+                    <div class="html5">
+                        <img alt="html5" src="./assets/icons/html5.svg" />
+                    </div>
+                    <div class="red-shadow">
+                        <img alt="sql-server" src="./assets/icons/sql-server.svg" />
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
 </section>
