--- a/src/app/presentation/notepad/notepad.css
+++ b/src/app/presentation/notepad/notepad.css
@@ -43,6 +43,7 @@
     position: absolute;
     top: 30px;
     width: 100%;
+    
     height: 20px;
     border-bottom: 2px solid rgb(224, 224, 224);
 }
@@ -53,7 +54,12 @@
     bottom: 4px;
 }
 
-.notepad__options li {
+.notepad__options li, .notepad__file-info__info li{
+    display: inline-block;
+    list-style-type: none;
+}
+
+.notepad__options li, .notepad p {
     font-size: 12px;
     margin-right: 9px;
     color: black;
@@ -62,20 +68,26 @@
 .notepad__scrollbar {
     position: absolute;
     bottom: 20px;
-    width: 96%;
+    width: 100%;
     height: 15px;
     background: rgb(238, 238, 238);
     border-bottom: 1px solid rgb(201, 201, 201);
 }
 
+.notepad__scrollbar i:last-child{
+    margin-right: 20px;
+}
+
 .notepad__scrollbar__vertical {
     background: rgb(238, 238, 238);
     width: 15px;
-    height: calc(96% - 69px);
+    height: calc(96% - 73px);
     position: absolute;
     right: 0;
     top: 50px;
 }
+
+
 
 .notepad__scrollbar__vertical i,
 .notepad__scrollbar i {
@@ -128,12 +140,12 @@
     height: 20px;
 }
 
-
 .notepad__file-info__info li{
     font-size: 10px;
     padding: 4px;
     border-left: 1px solid rgb(201, 201, 201);
     color: black;
+    height: 22px;
 }
 
 .notepad__scrollbar__icon-group {
